[package]
name = "portfolio-v2"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bincode = "2.0.1"
color-eyre = "0.6.5"
crossterm = "0.29.0"
image = "0.25.8"
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.100"
clap = { version = "4.0", features = ["derive"] }
rand_core = "0.6"
russh = "0.55.0"
ssh-key = "0.6.7"
tokio = "1.48.0"
